# openfst_serialization

./: CMakeLists.txt  README.md  dic.cxx  dic2.cxx  fst_debug.cc  main.cxx  run.sh  vocab.txt
